# project1337

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  tasks.py
.github/workflows/: python-app.yml
project1337/: __init__.py  asgi.py  celery.py  celery_tasks.py  const.py  settings.py  tasks.py  urls.py  wsgi.py
telemarketing/: __init__.py  apps.py  forms.py  models.py  quote_generation.py  urls.py  views.py
telemarketing/migrations/: 0001_initial.py  0002_alter_targetedcontact_reply.py  __init__.py
telemarketing/templates/telemarketing/: contact_form.html  success.html
