[tool.poetry]
name = "project1337"
version = "0.1.0"
description = ""
authors = ["Matija Pavlovic matpvl"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
celery = "^5.4.0"
mypy = "^1.13.0"
black = "^24.10.0"
pytest = "^8.3.3"
radon = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
